# Itsudemo

./: .gitignore  .gitmodules  .travis.yml  Android.mk  Application.mk  CMakeLists.txt  Info.rc  License.md  Makefile  Readme.md  TEXB_stream_format.txt  a.txt  tx_login-bonus.texb
HonokaMiku-2.3.1/: DecrypterContext.h
include/TEXB/: TEXBLib.h
sln/: Itsudemo.sln  Itsudemo.vcxproj  Itsudemo.vcxproj.filters
src/: Info.rc.in  Itsudemo.cpp  Itsudemo_Interactive.cpp  TEXB.h  TEXBFetch.cpp  TEXBLib.cpp  TEXBLoad.cpp  TEXBModify.cpp  TEXBPixel.cpp  TEXBPixel.h  TEXBSave.cpp  TEXBVersion.h.in  TIMG.cpp  xy2uv.h
tclap-1.2.1/tclap/: StdOutput.h
tests/: test.cpp  test2.cpp
